// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio group label is VNode 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">
          <h1>eat</h1>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">
          <h2>sleep</h2>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">
          <h3>game</h3>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group label is function 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>0-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>1-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>2-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group label is function 2`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>0-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>1-true</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>2-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group label is function 3`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>0-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>1-true</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>2-false</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group label-key 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>eat</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>sleep</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>game</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group layout direction 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--vertical">
    <!--v-if-->
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group options 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>eat</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>sleep</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>game</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group validation 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked var-radio--error" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>You must choose the first option</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`radio group validation 2`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio group value-key 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>eat</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text"><span>sleep</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled"><span>game</span></div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`radio validation 1`] = `
"<li class="var-radio__wrap">
  <div role="radio" aria-checked="false" class="var-radio">
    <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>You must choose one option at least</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</li>"
`;

exports[`radio validation 2`] = `
"<li class="var-radio__wrap">
  <div role="radio" aria-checked="true" class="var-radio">
    <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</li>"
`;

exports[`test validation with zod > radio 1`] = `
"<li class="var-radio__wrap">
  <div role="radio" aria-checked="false" class="var-radio">
    <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>You must choose one option \`1\`</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</li>"
`;

exports[`test validation with zod > radio 2`] = `
"<li class="var-radio__wrap">
  <div role="radio" aria-checked="true" class="var-radio">
    <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</li>"
`;

exports[`test validation with zod > radio group 1`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked var-radio--error" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>You must choose one option \`1\`</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test validation with zod > radio group 2`] = `
"<div class="var-radio-group__wrap">
  <ul aria-label="" role="radiogroup" class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="true" class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
    <li class="var-radio__wrap">
      <div role="radio" aria-checked="false" class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="-1"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </li>
  </ul>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
